base/laravel/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  
  revisionHistoryLimit: 2
  
  template:
    metadata:
      labels:
        app: laravel
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: laravel-nginx-config
        - name: laravel-env-volume
          secret:
            secretName: laravel-env-secret

      containers:
        - name: laravel
          image: 005423365664.dkr.ecr.ap-southeast-2.amazonaws.com/laravel-private/laravel-prod-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          command: ["php-fpm", "-F"]

          livenessProbe:
            tcpSocket:
              port: 9000
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              memory: "512Mi"
              cpu: "750m"
            limits:
              memory: "1Gi"
              cpu: "1.5"
          volumeMounts:
            - name: laravel-env-volume
              mountPath: /var/www/.env
              subPath: .env
          # envFrom:
          #   - secretRef:
          #       name: laravel-env-secret

        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
          
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
              httpHeaders:
              - name: Accept 
                value: application/json
              - name: X-K8s-Probe
                value: "true"
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            
          
          readinessProbe:
            httpGet:  
              path: /health/ready
              port: 80
              httpHeaders:
              - name: Accept
                value: application/json
              - name: X-K8s-Probe
                value: "true"
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            

          
          startupProbe:
            httpGet: 
              path: /health/startup
              port: 80
              httpHeaders:
              - name: Accept
                value: application/json
              - name: X-K8s-Probe
                value: "true"
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 12
            successThreshold: 1
